--- a/Module03/ex03/notebook.ipynb
+++ b/Module03/ex03/notebook.ipynb
@@ -1156,18 +1156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.axis.XTick at 0x11ba41000>,\n",
-       " <matplotlib.axis.XTick at 0x11ba40fa0>,\n",
-       " <matplotlib.axis.XTick at 0x11ba435e0>]"
+       "[<matplotlib.axis.XTick at 0x11bd5cdf0>,\n",
+       " <matplotlib.axis.XTick at 0x11bd5cdc0>,\n",
+       " <matplotlib.axis.XTick at 0x11bd5e260>]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
